# SDL2GameTemplate

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
assets/: assets description.txt
engine/: CMakeLists.txt
engine/src/: Engine.cpp  Engine.h
game/: CMakeLists.txt
game/src/: main.cpp
